Make sure images inside of aligned elements don't have top padding

--- a/src/sass/partials/_layout.scss
+++ b/src/sass/partials/_layout.scss
@@ -44,6 +44,10 @@ body {
 		width: 100%;
 	}
 	
+	img {
+		padding-top: 0;
+	}
+	
 }
 
 .alignright,
